Bug 477892 - "Mouse click animation" effect causes a visual glitch after every click
Summary: "Mouse click animation" effect causes a visual glitch after every click
Status: RESOLVED FIXED
Alias: None
Product: kwin
Classification: Plasma
Component: effects-various (other bugs)
Version First Reported In: 5.90.0
Platform: Neon Linux
: NOR normal
Target Milestone: ---
Assignee: KWin default assignee
URL:
Keywords: qt6
Depends on:
Blocks:
 
Reported: 2023-12-02 07:27 UTC by Patrick Silva
Modified: 2024-01-15 18:08 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
screen recording (1.12 MB, video/webm)
2023-12-02 07:27 UTC, Patrick Silva
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Patrick Silva 2023-12-02 07:27:41 UTC
Created attachment 163744 [details]
screen recording

STEPS TO REPRODUCE
1. enable "Mouse click animation" effect in Desktop Effects KCM
2. activate the effect by pressing meta+c
3. click

OBSERVED RESULT
visual glitch after every click. Please watch the attached screen recording.

EXPECTED RESULT
no glitch

SOFTWARE/OS VERSIONS
Operating System: KDE neon Unstable Edition
KDE Plasma Version: 5.81.80
KDE Frameworks Version: 5.245.0
Qt Version: 6.6.0
Graphics Platform: Wayland
Comment 1 Bug Janitor Service 2024-01-15 10:38:45 UTC
A possibly relevant merge request was started @ https://invent.kde.org/plasma/kwin/-/merge_requests/4925
Comment 2 Vlad Zahorodnii 2024-01-15 15:07:09 UTC
Git commit 09f97c8037a1e84869f5b8fbc895f1472ca2c2d5 by Vlad Zahorodnii.
Committed on 15/01/2024 at 15:42.
Pushed by vladz into branch 'master'.

plugins/mouseclick: Fix glitches

Effect frame geometry is not properly synchronized with the quick
scene geometry.

M  +3    -5    src/effect/effectframe.cpp
M  +1    -2    src/effect/effectframe.h
M  +1    -2    src/plugins/mouseclick/mouseclick.cpp

https://invent.kde.org/plasma/kwin/-/commit/09f97c8037a1e84869f5b8fbc895f1472ca2c2d5
Comment 3 Vlad Zahorodnii 2024-01-15 18:08:50 UTC
Git commit 9a09ebe673285799481cd3925ba06d019c43f846 by Vlad Zahorodnii.
Committed on 15/01/2024 at 18:56.
Pushed by vladz into branch 'Plasma/6.0'.

plugins/mouseclick: Fix glitches

Effect frame geometry is not properly synchronized with the quick
scene geometry.
(cherry picked from commit 09f97c8037a1e84869f5b8fbc895f1472ca2c2d5)

M  +3    -5    src/effect/effectframe.cpp
M  +1    -2    src/effect/effectframe.h
M  +1    -2    src/plugins/mouseclick/mouseclick.cpp

https://invent.kde.org/plasma/kwin/-/commit/9a09ebe673285799481cd3925ba06d019c43f846