fix: fix glitches in mouseclick

Effect frame geometry is not properly synchronized with the quick
scene geometry.

BUG: 477892